# ai-sdk-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
PLANNING/: ACCEPTANCE.md  PLAN.md  SESSION-1-SUMMARY.md  STATUS.md
crates/ai_agents/: Cargo.toml
crates/ai_core/: Cargo.toml
crates/ai_error/: Cargo.toml
crates/ai_error/src/: lib.rs
crates/ai_middleware/: Cargo.toml
crates/ai_providers/: Cargo.toml
crates/ai_providers/anthropic/: Cargo.toml
crates/ai_providers/ollama/: Cargo.toml
crates/ai_providers/openai/: Cargo.toml
crates/ai_rag/: Cargo.toml
crates/ai_stream/: Cargo.toml
crates/ai_structured/: Cargo.toml
crates/ai_tools/: Cargo.toml
crates/ai_tools_derive/: Cargo.toml
crates/ai_ui_protocol/: Cargo.toml
examples/agents/tool_loop/: Cargo.toml
examples/chats/axum_sse/: Cargo.toml
examples/rag/axum_retriever/: Cargo.toml
specs/ai-sdk-rs/: AI-SDK-for-Rust-Spec-v1.md
specs/ai-sdk-rs/appendices/: api-comparison.md  provider-matrix.md  references.md  roadmap.md  wire-format.md
